--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ server.port=8083
 #spring.datasource.url=jdbc:h2:mem:test
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+# PostgreSQL Database config
+spring.datasource.url=jdbc:postgresql://localhost:5432/reviewms
+spring.datasource.username=sadiq1698
+spring.datasource.password=password
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database.platform=org.hibernate.dialect.PostgreSQLDialect
